--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.23.0",
+    "@blocknote/mantine": "^0.23.0",
+    "@blocknote/react": "^0.23.0",
     "@clerk/clerk-react": "^5.21.0",
     "@clerk/nextjs": "^6.9.6",
     "@edgestore/react": "^0.2.2",
